--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 *
 {
    margin: 0;
@@ -9,6 +11,10 @@ html,
 body
 {
    font-family: 'Poppins', sans-serif;
+   color: $color-text;
+   -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+         text-rendering: optimizeLegibility;
    overflow: hidden;
 }
 
@@ -19,4 +25,130 @@ body
    left: 0;
    outline: none;
    z-index: -999;
+}
+
+a {
+   text-decoration: none;
+   color: $color-text;
+}
+
+button,
+.button {
+   display: flex;
+   align-items: center;
+   outline: none;
+   border: none;
+   padding: 8px 14px;
+   border-radius: 10px;
+   background-color: transparent;
+   font-size: 14px;
+   cursor: pointer;
+   font-weight: 700;
+
+   &--color-primary {
+      background-color: $color-primary;
+      color: #fff;
+   }
+
+   &--large {
+      padding: 14px 18px;
+   }
+}
+
+.navbar {
+   &__header {
+      padding: 16px 32px;
+      box-shadow: 0px -20px 39px 5px rgba(36, 36, 36, 0.25);
+
+      &-list {
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
+         flex-wrap: wrap;
+         list-style-type: none;
+      }
+
+      &-logo {
+         font-size: 38px;
+         font-weight: 900;
+
+         a {
+            display: flex;
+            align-items: center;
+            
+            span {
+               margin-left: 12px;
+            }
+         }
+      }
+
+      &-item {
+         margin-left: 16px;
+         font-weight: 500;
+      }
+   }
+}
+
+.main-content {
+   &__wrapper {
+      height: 75vh;
+      padding: 24px 32px;
+      padding-top: 128px;
+      max-width: 50%;
+   }
+
+   &__page {
+      width: 100%;
+   }
+
+   &__navigation {
+      margin-bottom: 32px;
+
+      .go-back {
+         padding: 0;
+         font-weight: 500;
+
+         span {
+            margin-left: 20px;
+            font-size: 16px;
+         }
+
+         &--hidden {
+            display: none;
+         }
+      }
+   }
+}
+
+.content {
+   margin-bottom: 42px;
+
+   &__title {
+      font-size: 38px;
+      font-weight: 700;
+      line-height: 48px;
+      margin-bottom: 6px;
+   }
+
+   &__subtitle {
+      margin-bottom: 4px;
+      font-size: 18px;
+   }
+
+   &__mini-subtitle {
+      font-size: 12px;
+   }
+}
+
+.footer {
+   display: flex;
+   align-items: center;
+   justify-content: space-around;
+   width: 100%;
+
+   &__title {
+      font-size: 42px;
+      font-weight: 900;
+      color: $color-gray;
+   }
 }
