--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -159,14 +159,27 @@ button,
 
 .footer {
    display: flex;
-   align-items: center;
-   justify-content: space-around;
-   width: 100%;
+   width: calc(250px * 14);
+   // width: 100%;
    // height: calc(25vh - 64px);
+   animation: scroll 40s linear infinite;
+
+   &__wrapper {
+      margin: auto;
+      overflow:hidden;
+      position: relative;
+      width: auto;
+   }
 
    &__title {
       font-size: 42px;
       font-weight: 900;
       color: $color-gray;
+      width: 250px;
    }
+}
+
+@keyframes scroll {
+	0% { transform: translateX(0); }
+	100% { transform: translateX(calc(-250px * 7))}
 }
