--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -107,6 +107,8 @@ button,
 }
 
 .main-content {
+   height: 100%;
+
    &__wrapper {
       height: 75vh;
       padding: 24px 32px;
@@ -179,7 +181,90 @@ button,
    }
 }
 
+.post {
+   position: relative;
+
+   &-bubble {
+      position: absolute;
+
+      &__wrapper {
+         list-style-type: none;
+      }
+
+      &__image {
+         border-radius: 999px;
+         cursor: pointer;
+      }
+
+      &__card {
+         position: fixed;
+         padding: 16px;
+         background-color: #fff;
+         box-shadow: 0px 11px 39px -6px rgba(36, 36, 36, 0.25);
+         border-radius: 10px;
+         opacity: 0;
+         visibility: hidden;
+         transition: 200ms ease-in-out all;
+         height: 150px;
+         width: 500px;
+         z-index: 999;
+
+         &--active {
+            opacity: 1;
+            visibility: visible;
+         }
+
+         &-title {
+            font-size: 20px;
+            font-weight: 600;
+            margin-bottom: 8px;
+         }
+
+         &-actions {
+            display: flex;
+            justify-content: flex-end;
+            // margin-right: 12px;
+         }
+      }
+
+      &--order-2 {
+         top: 120px;
+         left: 64px;
+      }
+      
+      &--order-3 {
+         top: 64px;
+         left: 192px;
+      }
+
+      &--order-4 {
+         top: 132px;
+         left: 324px;
+      }
+
+      &--order-5 {
+         top: 0;
+         left: 362px;
+      }
+   }
+}
+
 @keyframes scroll {
 	0% { transform: translateX(0); }
 	100% { transform: translateX(calc(-250px * 7))}
+}
+
+@keyframes float {
+	0% {
+		box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+		transform: translatey(0px);
+	}
+	50% {
+		box-shadow: 0 25px 15px 0px rgba(0,0,0,0.2);
+		transform: translatey(-20px);
+	}
+	100% {
+		box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+		transform: translatey(0px);
+	}
 }
