--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -19,6 +19,21 @@ body
    overflow: hidden;
 }
 
+::-webkit-scrollbar {
+   width: 5px;
+ }
+::-webkit-scrollbar-track {
+   background: rgba(0, 0, 0, .2);
+   border-radius: 0.375rem;
+ }
+::-webkit-scrollbar-thumb {
+   background: rgba(0, 0, 0, .3);
+   border-radius: 0.375rem;
+ }
+::-webkit-scrollbar-thumb:hover {
+   background: rgba(0, 0, 0, .4);
+ }
+
 .webgl
 {
    position: fixed;
@@ -69,6 +84,13 @@ button,
 
    &--large {
       padding: 14px 18px;
+   }
+
+   &--full {
+      width: 100%;
+      text-align: center;
+      justify-content: center;
+      padding: 8px 12px;
    }
 }
 
@@ -150,8 +172,11 @@ button,
 
    &__wrapper {
       &.detail {
+         max-width: 520px;
+
          .post {
             max-width: 520px;
+            font-size: 14px;
          }
       }
    }
@@ -182,7 +207,7 @@ button,
       }
 
       p {
-         font-size: 14px;
+         font-size: 13px;
       }
    }
 }
@@ -278,6 +303,121 @@ button,
 
    &__body {
       text-align: justify;
+   }
+}
+
+.comment {
+   height: 150px;
+   overflow-y: auto;
+   overflow-x: hidden;
+   border-left: 3px solid $color-gray;
+   margin-top: 12px;
+   max-width: 520px;
+   padding-right: 12px;
+   margin-bottom: 16px;
+
+   &-item {
+      padding-left: 14px;
+
+      &__title {
+         font-weight: 600;
+         color: $color-text;
+         margin-bottom: 8px;
+      }
+
+      &__body {
+         font-size: 13px;
+         padding-bottom: 16px;
+         margin-bottom: 16px;
+         border-bottom: 3px solid $color-gray;
+      }
+   }
+}
+
+.modal {
+   &__booking {
+      position: relative;
+      background-color: #fff;
+      border-radius: 10px 10px 0 0;
+      box-shadow: 0px 11px 39px -6px rgba(36, 36, 36, 0.25);
+      padding: 24px 32px;
+      width: 420px;
+
+      &--active {
+         &.modal__booking-wrapper {
+            bottom: 0;
+            opacity: 1;
+            visibility: visible;
+         }
+      }
+
+      &-wrapper {
+         position: absolute;
+         z-index: 99999;
+         left: calc(50% - 80px);
+         bottom: -50vh;
+         transition: 250ms ease-in-out all;
+         opacity: 0;
+         visibility: hidden;
+      }
+
+      .close-button {
+         position: absolute;
+         top: -20px;
+         right: -12px;
+         border-radius: 999px;
+         background-color: #fff;
+         padding: 16px;
+         box-shadow: 0px 11px 39px -6px rgba(36, 36, 36, 0.25);
+      }
+   }
+
+   &__title {
+      font-weight: 500;
+      font-size: 22px;
+      margin-bottom: 16px;
+      text-align: center;
+   }
+
+   &__profile {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 24px;
+
+      img {
+         border-radius: 999px;
+         margin-bottom: 8px;
+      }
+
+      h4 {
+         font-size: 18px;
+      }
+
+      a {
+         margin-top: -2px;
+         font-size: 14px;
+         text-decoration: underline;
+      }
+   }
+
+   &__text-box {
+      margin-bottom: 16px;
+
+      textarea {
+         width: 100%;
+         box-sizing: border-box;
+         resize: none;
+         border-radius: 10px;
+         border: 2px solid $color-gray;
+         padding: 8px 12px;
+         font-family: 'Poppins', sans-serif;
+
+         &:focus {
+            outline: 2px solid $color-primary;
+         }
+      }
    }
 }
 
