--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -17,7 +17,8 @@ body
    -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
          text-rendering: optimizeLegibility;
-   overflow: hidden;
+   overflow-y: auto;
+   overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -149,7 +150,7 @@ button,
    height: 100%;
 
    &__wrapper {
-      height: 75vh;
+      min-height: 75vh;
       padding: 24px 32px;
       padding-top: 128px;
       max-width: 50%;
