--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -59,6 +59,7 @@ body
    background-color: $color-primary;
    transition: 250ms ease-in-out all;
    color: white;
+   z-index: 999999999;
 }
 
 a {
@@ -117,7 +118,7 @@ button,
       position: fixed;
       top: 0;
       left: 0;
-      z-index: 9999999;
+      z-index: 99999;
       padding: 16px 32px;
       background-color: #fff;
       width: 100%;
@@ -380,10 +381,10 @@ button,
       border-radius: 10px 10px 0 0;
       box-shadow: 0px 11px 39px -6px rgba(36, 36, 36, 0.25);
       padding: 24px 32px;
-      width: 420px;
-      overflow-y: auto;
-      overflow-x: hidden;
-      height: 350px;
+      width: 350px;
+      // overflow-y: auto;
+      // overflow-x: hidden;
+      height: 70vh;
 
       &--active {
          &.modal__booking-wrapper {
@@ -406,17 +407,17 @@ button,
       .close-button {
          position: absolute;
          border-radius: 999px;
-         padding: 16px;
-         top: 8px;
-         right: 6px;
-         background-color: transparent;
-         box-shadow: unset;
+         padding: 14px;
+         top: -20px;
+         right: -12px;
+         background-color: #fff;
+         box-shadow: 0px 11px 39px -6px rgba(36, 36, 36, 0.25);
       }
    }
 
    &__title {
       font-weight: 500;
-      font-size: 22px;
+      font-size: 18px;
       margin-bottom: 16px;
       text-align: center;
    }
@@ -431,6 +432,8 @@ button,
       img {
          border-radius: 999px;
          margin-bottom: 8px;
+         width: 100px;
+         height: 100px;
       }
 
       h4 {
@@ -449,6 +452,7 @@ button,
 
       textarea {
          width: 100%;
+         height: 4em;
          box-sizing: border-box;
          resize: none;
          border-radius: 10px;
@@ -463,30 +467,54 @@ button,
    }
 }
 
-@media screen and(min-height: 720px) {
+@media screen and(min-height: 564px) {
+   .post {
+      &.booking-list {
+         height: 170px;
+      }
+   }
+
    .modal {
       &__booking {
+         width: 420px;
          height: auto;
          overflow-y: unset;
          overflow-x: unset;
 
-         .close-button {
-            top: -20px;
-            right: -12px;
-            background-color: #fff;
-            box-shadow: 0px 11px 39px -6px rgba(36, 36, 36, 0.25);
+         // .close-button {
+         //    top: -20px;
+         //    right: -12px;
+         //    background-color: #fff;
+         //    box-shadow: 0px 11px 39px -6px rgba(36, 36, 36, 0.25);
+         // }
+      }
+
+      &__title {
+         font-size: 22px;
+      }
+
+      &__profile {
+         img {
+            width: 120px;
+            height: 120px;
+         }
+
+         h4 {
+            font-size: 18px;
+         }
+   
+         a {
+            margin-top: -2px;
+            font-size: 14px;
+            text-decoration: underline;
          }
       }
-   }
 
-   .close-button {
-      position: absolute;
-      top: 8px;
-      right: 6px;
-      border-radius: 999px;
-      // background-color: #fff;
-      padding: 16px;
-      // box-shadow: 0px 11px 39px -6px rgba(36, 36, 36, 0.25);
+      &__text-box {
+         textarea {
+            height: 7em;
+         }
+      }
    }
 }
 
